src/retro_core.h

typedef bool    (*retro_core_environment_cb_t)        (unsigned cmd, void *data, void *user_data);
typedef void    (*retro_core_video_refresh_cb_t)      (const void *data, unsigned width, unsigned height, size_t pitch, void *user_data);